♻️ refactor : 즐겨찾기 중복 검증을 entity->service로 이동, 즐겨찾기 조회시 페이지네이션, 유저와 데이터 조회 로직 하나로 변경